--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,30 +36,34 @@ android {
 }
 
 dependencies {
+    def archVersion = '2.2.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:$archVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$archVersion"
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
     //Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.5.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:2.6.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.6.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
     implementation "com.squareup.okhttp3:okhttp:3.14.2"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
     implementation 'com.google.code.gson:gson:2.8.5'
 
     //RX Java
@@ -69,9 +73,6 @@ dependencies {
 
     //Dagger
     implementation "com.google.dagger:dagger:2.23.2"
-    implementation 'androidx.navigation:navigation-fragment:2.2.1'
-    implementation 'androidx.navigation:navigation-ui:2.2.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     kapt "com.google.dagger:dagger-compiler:2.23.2"
     implementation "com.google.dagger:dagger-android-support:2.23.2"
     kapt "com.google.dagger:dagger-android-processor:2.23.2"
