--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$archVersion"
